Refactoring and jUnit for Config Models