@@ -7,8 +7,8 @@ import it.gov.pagopa.initiative.dto.rule.reward.RewardValueDTO;
 import it.gov.pagopa.initiative.dto.rule.trx.*;
 import it.gov.pagopa.initiative.model.*;
 import it.gov.pagopa.initiative.model.rule.reward.InitiativeRewardRule;
-import it.gov.pagopa.initiative.model.rule.reward.RewardGroups;
-import it.gov.pagopa.initiative.model.rule.reward.RewardValue;
+import it.gov.pagopa.initiative.model.rule.reward.RewardGroupsModel;
+import it.gov.pagopa.initiative.model.rule.reward.RewardValueModel;
 import it.gov.pagopa.initiative.model.rule.trx.*;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
@@ -16,7 +16,6 @@ import org.springframework.util.CollectionUtils;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class InitiativeModelToDTOMapper {
@@ -163,12 +162,12 @@ public class InitiativeModelToDTOMapper {
             return null;
         }
         InitiativeRewardRuleDTO dto = null;
-        if (rewardRule instanceof RewardValue rewardValueInput) {
-            dto = RewardValueDTO.builder().rewardValue(rewardValueInput.getRewardValue()).build();
-        } else if (rewardRule instanceof RewardGroups rewardGroupsInput) {
-            dto = RewardGroupsDTO.builder().rewardGroups(rewardGroupsInput.getRewardGroups().stream().map(
+        if (rewardRule instanceof RewardValueModel rewardValueModelInput) {
+            dto = RewardValueDTO.builder().rewardValue(rewardValueModelInput.getRewardValue()).build();
+        } else if (rewardRule instanceof RewardGroupsModel rewardGroupsModelInput) {
+            dto = RewardGroupsDTO.builder().rewardGroups(rewardGroupsModelInput.getRewardGroups().stream().map(
                     x -> RewardGroupsDTO.RewardGroupDTO.builder().from(x.getFrom()).to(x.getTo()).rewardValue(x.getRewardValue()).build()
-            ).collect(Collectors.toList())).build();
+            ).toList()).build();
         }
         return dto;
     }
@@ -216,9 +215,9 @@ public class InitiativeModelToDTOMapper {
                                         .startTime(i.getStartTime())
                                         .endTime(i.getEndTime())
                                         .build())
-                                .collect(Collectors.toList()))
+                                .toList())
                         .build())
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     private List<RewardLimitsDTO> toRewardLimitsDTO(List<RewardLimits> rewardLimit) {
@@ -229,7 +228,7 @@ public class InitiativeModelToDTOMapper {
                         .frequency(RewardLimitsDTO.RewardLimitFrequency.valueOf(x.getFrequency().name()))
                         .rewardLimit(x.getRewardLimit())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private ThresholdDTO toThresholdDTO(Threshold threshold) {
